--- a/static/index.html
+++ b/static/index.html
@@ -76,22 +76,22 @@
 <footer>
 	<div class="buttons" id="contactos">
 		<div class="face">
-			<a href="https://web.facebook.com/?locale=es_LA&_rdc=1&_rdr" class="fa fa-facebook"></a>
+			<a href="https://www.facebook.com/profile.php?id=100064371901024&mibextid=ZbWKwL" class="fa fa-facebook"></a>
 		</div>
 		<div class="twit">
 			<a href="https://twitter.com/" class="fa fa-twitter"></a>
 		</div>
 		<div class="what">
-			<a href="https://web.whatsapp.com/" class="fa fa-whatsapp"></a>
+			<a href="https://wa.me/573203960322" class="fa fa-whatsapp"></a>
 		</div>
 		<div class="yout">
 			<a href="https://www.youtube.com/" class="fa fa-youtube"></a>
 		</div>
-		<div class="gith">
-			<a href="https://github.com/" class="fa fa-github"></a>
+		<div class="merca">
+			<a href="https://github.com/" class="fa"><img src="/static/img/mercado-libre-svgrepo-com.svg" alt="" class="imgml"></a>
 		</div>
 		<div class="inst">
-			<a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+			<a href="https://www.instagram.com/suplesshopcolombia" class="fa fa-instagram"></a>
 		</div>	
 	</div>
 </footer>
